# windows-event-log

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
resources/: messages.mc
scripts/: Install-Hooks.ps1  install-hooks.sh
scripts/hooks/: pre-commit
src/: builder.rs  error.rs  key.rs  lib.rs  messages.rs  registry.rs
