[package]
name = "windows-event-log"
version = "0.1.0"
authors = ["Kalle Kankaanpää <kalle.kankaanpaa@protonmail.com>"]
edition = "2021"
description = "Windows Event Log logger implementation"
repository = "https://github.com/kallekankaanpaa/windows-event-log"
license = "MIT or Apache-2.0"
keywords = ["event-log", "logging", "windows"]
categories = ["windows-apis", "debugging"]

[dependencies]
log = { version = "0.4.17", features = ["std"] }
windows = { version = "0.37.0", features = ["Win32_Foundation", "Win32_System_EventLog", "Win32_System_Registry", "Win32_Security"] }
thiserror = "1"

[build-dependencies]
bindgen = "0.60.1"